# susan_control

./: CMakeLists.txt  README.md  package.xml
config/: controllers.yaml  joint_limits.yaml
include/motor_protocols/: DM4340.h  ME8010E17B50.h  MG4005I10.h  MG4010I36.h  MG6012I36.h
include/ros_interface/: calibration.h  susan_hardware_interface.h  torque_hardware_interface.h
include/utils/: utils.h
launch/: calibration.launch  susan_control.launch  torque_control.launch
scripts/: usb2can.sh
src/motor_protocols/: DM4340.cpp  ME8010E17B50.cpp  MG4005I10.cpp  MG4010I36.cpp  MG6012I36.cpp
src/ros_interface/: calibration.cpp  susan_hardware_interface.cpp  torque_hardware_interface.cpp
src/ros_nodes/: calibration_node.cpp  susan_hardware_interface_node.cpp  torque_hardware_interface_node.cpp
src/utils/: pid.cpp  utils.cpp
