<?xml version="1.0"?>
<package format="2">
  <name>susan_control</name>
  <version>0.0.0</version>
  <description>The susan_control package</description>

  <maintainer email="hanzx@u.northwestern.edu">Zhengxiao Han</maintainer>
  <author email="hanzx@u.northwestern.edu">Zhengxiao Han</author>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>can_msgs</depend>
  <depend>std_msgs</depend>
  <depend>controller_manager</depend>
  <depend>socketcan_bridge</depend>
  <depend>joint_trajectory_controller</depend>
  <depend>effort_controllers</depend>
</package>
